begin structure of css styling and page container

--- a/index.html
+++ b/index.html
@@ -15,6 +15,28 @@
 
 
 
+<div id="container">
+
+    <div id="header">
+        
+        <div><img src="images/logo.png" alt="Codeup Logo" class="logo"></div>
+        <div>Codeup Design</div>
+        <div>Services</div>
+        <div>Work</div>
+        <div>Design</div>
+        <div>Contact</div>
+        
+    </div>
+
+
+
+<h1>Visual Design & Web Development</h1>
+
+
+
+</div>
+
+
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
