added the divs for circles and styling for them.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 
 
 <h1>Visual Design & Web Development</h1>
+    <h2>From Park City, Utah</h2>
+    <div class="circle-lg red">Design</divclass>
+    <div class="circle-lg orange">Develop</div>
+    <div class="circle-lg green">Support</div>
+    <div class="circle-lg teal">Host</div>
 
 
 
