--- a/index.html
+++ b/index.html
@@ -37,11 +37,37 @@
     <div class="circle-lg green">Support</div>
     <div class="circle-lg teal">Host</div>
 
+        <hr>
 
+       <p>Selected Work</p>
+        <img src="images/apple-ipad.jpg" alt="Ipads, with apples">
+        <p>Featured Project</p>
+        <div class="circle-sm red">D</div>
+        <div class="circle-sm orange">D</div>
+        <div class="circle-sm green">S</div>
+        <div class="circle-sm teal">H</div>
 
+        <img src="images/macbook.jpg" alt="Macbook">
+        <p>Featured Project</p>
+        <div class="circle-sm red">D</div>
+        <div class="circle-sm orange">D</div>
+        <div class="circle-sm green">S</div>
+        <div class="circle-sm teal">H</div>
+
+        <img src="images/man.jpg" alt="man, thinking about code">
+        <p>Featured Project</p>
+        <div class="circle-sm red">D</div>
+        <div class="circle-sm orange">D</div>
+        <div class="circle-sm green">S</div>
+        <div class="circle-sm teal">H</div>
+
+        <img src="images/security.jpg" alt="security icon">
+        <p>Featured Project</p>
+        <div class="circle-sm red">D</div>
+        <div class="circle-sm orange">D</div>
+        <div class="circle-sm green">S</div>
+        <div class="circle-sm teal">H</div>
 </div>
-
-
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
