finished page content creation

--- a/index.html
+++ b/index.html
@@ -67,6 +67,42 @@
         <div class="circle-sm orange">D</div>
         <div class="circle-sm green">S</div>
         <div class="circle-sm teal">H</div>
+
+
+
+        <p>The Last</p>
+
+    <div class="last-container">
+
+        <div class="last-item">
+            <div class="last-image"><img src="images/mobile-phone.jpg" alt="Head" class="last-img"></div>
+            <div class="last-text"><h4>The Admin Bar and Absolute Positioning</h4></div>
+        </div>
+
+        <div class="last-item">
+            <div class="last-image"><img src="images/head.jpg" alt="Head" class="last-img">/div>
+            <div class="last-text"><h4>Nibblers Awesome Website Testing</h4></div>
+        </div>
+
+
+        <div class="last-item">
+            <div class="last-image"><img src="images/ipad.jpg" alt="Head" class="last-img"></div>
+            <div class="last-text"><h4>How to get google to Like you</h4></div>
+        </div>
+
+
+        <div class="twitter-header">
+
+
+        </div>
+        <div class="tweet">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+
+
+
+    </div>
+
 </div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
