--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
 <div id="container">
 
-    <div id="header">
+    <div id="header" class="d-flex">
         
         <div><img src="images/logo.png" alt="Codeup Logo" class="logo"></div>
-        <div>Codeup Design</div>
-        <div>Services</div>
-        <div>Work</div>
-        <div>Design</div>
-        <div>Contact</div>
+        <div><p>Codeup Design</p></div>
+        <div><a href="#">Services</a></div>
+        <div><a href="#">Work</a></div>
+        <div><a href="#">Design</a></div>
+        <div><a href="#">Contact</a></div>
         
     </div>
 
