worked on the large circles, putting it in a flexbox and getting the text right

--- a/index.html
+++ b/index.html
@@ -32,16 +32,18 @@
 
 <h1>Visual Design & Web Development</h1>
     <h2>From Park City, Utah</h2>
-    <div class="circle-lg red">Design</divclass>
+    <div class="d-flex flex-wrap">
+    <div class="circle-lg red align-middle">Design</div>
     <div class="circle-lg orange">Develop</div>
     <div class="circle-lg green">Support</div>
     <div class="circle-lg teal">Host</div>
-
+    </div>
         <hr>
 
        <p>Selected Work</p>
         <img src="images/apple-ipad.jpg" alt="Ipads, with apples">
         <p>Featured Project</p>
+
         <div class="circle-sm red">D</div>
         <div class="circle-sm orange">D</div>
         <div class="circle-sm green">S</div>
