adding header background coloring. added formatting for header in lg size.

--- a/index.html
+++ b/index.html
@@ -15,17 +15,20 @@
 
 
 
-<div id="container">
+<div class="header-container">
+</div>
+
+<div class="container">
 
     <div id="header" class="d-flex">
-        
+
         <div><img src="images/logo.png" alt="Codeup Logo" class="logo"></div>
-        <div><p>Codeup Design</p></div>
-        <div><a href="#">Services</a></div>
-        <div><a href="#">Work</a></div>
-        <div><a href="#">Design</a></div>
-        <div><a href="#">Contact</a></div>
-        
+        <div class="align-self-center"><p>Codeup Design</p></div>
+        <div class="align-self-center ml-auto"><a href="#">Services</a></div>
+        <div class="align-self-center"><a href="#">Work</a></div>
+        <div class="align-self-center"><a href="#">Design</a></div>
+        <div class="align-self-center"><a href="#">Contact</a></div>
+
     </div>
 
 
