worked on the circles some more. have to get the imagess sorted before i can finish on the buttons.

--- a/index.html
+++ b/index.html
@@ -32,14 +32,17 @@
     </div>
 
 
+    <div class="d-flex flex-column justify-content-between">
+        <div class="align-self-center"><h1 >Visual Design & Web Development</h1></div>
+        <div class="align-self-center"><h2>From Park City, Utah</h2></div>
 
-<h1>Visual Design & Web Development</h1>
-    <h2>From Park City, Utah</h2>
-    <div class="d-flex flex-wrap">
-    <div class="circle-lg red align-middle">Design</div>
-    <div class="circle-lg orange">Develop</div>
-    <div class="circle-lg green">Support</div>
-    <div class="circle-lg teal">Host</div>
+
+    </div>
+    <div class="d-flex flex-wrap justify-content-center">
+    <div class="circle-lg red align-middle m-2">Design</div>
+    <div class="circle-lg orange m-2">Develop</div>
+    <div class="circle-lg green m-2 ">Support</div>
+    <div class="circle-lg teal m-2">Host</div>
     </div>
         <hr>
 
