--- a/index.html
+++ b/index.html
@@ -21,23 +21,20 @@
 <div class="container">
 
     <div id="header" class="d-flex">
-
         <div><img src="images/logo.png" alt="Codeup Logo" class="logo"></div>
         <div class="align-self-center"><p>Codeup Design</p></div>
         <div class="align-self-center ml-auto"><a href="#">Services</a></div>
         <div class="align-self-center"><a href="#">Work</a></div>
         <div class="align-self-center"><a href="#">Design</a></div>
         <div class="align-self-center"><a href="#">Contact</a></div>
-
     </div>
 
 
     <div class="d-flex flex-column justify-content-between">
         <div class="align-self-center"><h1 >Visual Design & Web Development</h1></div>
         <div class="align-self-center"><h2>From Park City, Utah</h2></div>
-
-
     </div>
+
     <div class="d-flex flex-wrap justify-content-center">
     <div class="circle-lg red align-middle m-2">Design</div>
     <div class="circle-lg orange m-2">Develop</div>
@@ -46,37 +43,60 @@
     </div>
         <hr>
 
-       <p>Selected Work</p>
-        <img src="images/apple-ipad.jpg" alt="Ipads, with apples">
-        <p>Featured Project</p>
-
-        <div class="circle-sm red">D</div>
-        <div class="circle-sm orange">D</div>
-        <div class="circle-sm green">S</div>
-        <div class="circle-sm teal">H</div>
-
-        <img src="images/macbook.jpg" alt="Macbook">
-        <p>Featured Project</p>
-        <div class="circle-sm red">D</div>
-        <div class="circle-sm orange">D</div>
-        <div class="circle-sm green">S</div>
-        <div class="circle-sm teal">H</div>
-
-        <img src="images/man.jpg" alt="man, thinking about code">
-        <p>Featured Project</p>
-        <div class="circle-sm red">D</div>
-        <div class="circle-sm orange">D</div>
-        <div class="circle-sm green">S</div>
-        <div class="circle-sm teal">H</div>
-
-        <img src="images/security.jpg" alt="security icon">
-        <p>Featured Project</p>
-        <div class="circle-sm red">D</div>
-        <div class="circle-sm orange">D</div>
-        <div class="circle-sm green">S</div>
-        <div class="circle-sm teal">H</div>
 
 
+    <div class="container">
+        <div class="row">
+
+            <div class="col-md-8 col-sm-12">
+
+
+                <div class="container">
+
+                    <div class="row"><p>Selected Work</p></div>
+
+                    <div class="row">
+                        <div class="col-sm-6 col-xs-12">
+                            <img src="images/apple-ipad.jpg" alt="Ipads, with apples" class="feature-img img-fluid">
+                            <p>Featured Project</p>
+                            <div class="circle-sm red">D</div>
+                            <div class="circle-sm orange">D</div>
+                            <div class="circle-sm green">S</div>
+                            <div class="circle-sm teal">H</div>
+                        </div>
+                        <div class="col-sm-6 col-xs-12">
+                            <img src="images/macbook.jpg" alt="Macbook"  class="feature-img img-fluid">
+                            <p>Featured Project</p>
+                            <div class="circle-sm red">D</div>
+                            <div class="circle-sm orange">D</div>
+                            <div class="circle-sm green">S</div>
+                            <div class="circle-sm teal">H</div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                <img src="images/man.jpg" alt="man, thinking about code"  class="feature-img img-fluid">
+                <p>Featured Project</p>
+                <div class="circle-sm red">D</div>
+                <div class="circle-sm orange">D</div>
+                <div class="circle-sm green">S</div>
+                <div class="circle-sm teal">H</div>
+
+                <img src="images/security.jpg" alt="security icon"  class="feature-img">
+                <p>Featured Project</p>
+                <div class="circle-sm red">D</div>
+                <div class="circle-sm orange">D</div>
+                <div class="circle-sm green">S</div>
+                <div class="circle-sm teal">H</div>
+
+                    </div>
+
+
+                </div>
+
+            </div>
+
+            <div class="col-md-4 col-sm-12">
 
         <p>The Last</p>
 
@@ -88,7 +108,7 @@
         </div>
 
         <div class="last-item">
-            <div class="last-image"><img src="images/head.jpg" alt="Head" class="last-img">/div>
+            <div class="last-image"><img src="images/head.jpg" alt="Head" class="last-img"></div>
             <div class="last-text"><h4>Nibblers Awesome Website Testing</h4></div>
         </div>
 
@@ -107,10 +127,13 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
 
-
+    </div>
 
     </div>
 
+    </div>
+
+</div>
 </div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
