--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="row">
                         <div class="col-sm-6 col-xs-12">
                             <img src="images/apple-ipad.jpg" alt="Ipads, with apples" class="feature-img img-fluid">
-                            <p>Featured Project</p>
+                            <p class="feature-project">Featured Project</p>
                             <div class="circle-sm red">D</div>
                             <div class="circle-sm orange">D</div>
                             <div class="circle-sm green">S</div>
@@ -66,7 +66,7 @@
                         </div>
                         <div class="col-sm-6 col-xs-12">
                             <img src="images/macbook.jpg" alt="Macbook"  class="feature-img img-fluid">
-                            <p>Featured Project</p>
+                            <p class="feature-project">Featured Project</p>
                             <div class="circle-sm red">D</div>
                             <div class="circle-sm orange">D</div>
                             <div class="circle-sm green">S</div>
@@ -75,21 +75,23 @@
                     </div>
 
                     <div class="row">
+                <div class="col-sm-6 col-xs-12">
                 <img src="images/man.jpg" alt="man, thinking about code"  class="feature-img img-fluid">
-                <p>Featured Project</p>
+                    <p class="feature-project">Featured Project</p>
                 <div class="circle-sm red">D</div>
                 <div class="circle-sm orange">D</div>
                 <div class="circle-sm green">S</div>
                 <div class="circle-sm teal">H</div>
-
-                <img src="images/security.jpg" alt="security icon"  class="feature-img">
-                <p>Featured Project</p>
-                <div class="circle-sm red">D</div>
-                <div class="circle-sm orange">D</div>
-                <div class="circle-sm green">S</div>
-                <div class="circle-sm teal">H</div>
-
                     </div>
+                <div class="col-sm-6 col-xs-12">
+                <img src="images/security.jpg" alt="security icon"  class="feature-img img-fluid">
+                    <p class="feature-project">Featured Project</p>
+                <div class="circle-sm red">D</div>
+                <div class="circle-sm orange">D</div>
+                <div class="circle-sm green">S</div>
+                <div class="circle-sm teal">H</div>
+                </div>
+                </div>
 
 
                 </div>
