--- a/index.html
+++ b/index.html
@@ -102,21 +102,21 @@
 
         <p>The Last</p>
 
-    <div class="last-container">
+    <div class="row">
 
-        <div class="last-item">
-            <div class="last-image"><img src="images/mobile-phone.jpg" alt="Head" class="last-img"></div>
+        <div class="d-flex flex-row">
+            <div class="last-image p-2"><img src="images/mobile-phone.jpg" alt="Head" class="last-img"></div>
             <div class="last-text"><h4>The Admin Bar and Absolute Positioning</h4></div>
         </div>
 
-        <div class="last-item">
-            <div class="last-image"><img src="images/head.jpg" alt="Head" class="last-img"></div>
+        <div class="d-flex flex-row">
+            <div class="last-image p-2"><img src="images/head.jpg" alt="Head" class="last-img "></div>
             <div class="last-text"><h4>Nibblers Awesome Website Testing</h4></div>
         </div>
 
 
-        <div class="last-item">
-            <div class="last-image"><img src="images/ipad.jpg" alt="Head" class="last-img"></div>
+        <div class="d-flex flex-row">
+            <div class="last-image p-2"><img src="images/ipad.jpg" alt="Head" class="last-img"></div>
             <div class="last-text"><h4>How to get google to Like you</h4></div>
         </div>
 
