small icons right aligment

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
                     <div class="row">
                         <div class="col-sm-6 col-xs-12">
-                            <img src="images/apple-ipad.jpg" alt="Ipads, with apples" class="feature-img img-fluid">
+                            <img src="images/apple-ipad.jpg" alt="Ipads, with apples" class="img-fluid rounded">
                             <p class="feature-project">Featured Project</p>
                             <div class="circle-sm red">D</div>
                             <div class="circle-sm orange">D</div>
@@ -65,7 +65,7 @@
                             <div class="circle-sm teal">H</div>
                         </div>
                         <div class="col-sm-6 col-xs-12">
-                            <img src="images/macbook.jpg" alt="Macbook"  class="feature-img img-fluid">
+                            <img src="images/macbook.jpg" alt="Macbook"  class="img-fluid rounded">
                             <p class="feature-project">Featured Project</p>
                             <div class="circle-sm red">D</div>
                             <div class="circle-sm orange">D</div>
@@ -76,15 +76,18 @@
 
                     <div class="row">
                 <div class="col-sm-6 col-xs-12">
-                <img src="images/man.jpg" alt="man, thinking about code"  class="feature-img img-fluid">
+                <img src="images/man.jpg" alt="man, thinking about code"  class="img-fluid rounded">
                     <p class="feature-project">Featured Project</p>
-                <div class="circle-sm red">D</div>
-                <div class="circle-sm orange">D</div>
-                <div class="circle-sm green">S</div>
-                <div class="circle-sm teal">H</div>
+
+
+                        <div class="circle-sm red">D</div>
+                        <div class="circle-sm orange">D</div>
+                        <div class="circle-sm green">S</div>
+                        <div class="circle-sm teal">H</div>
+
                     </div>
                 <div class="col-sm-6 col-xs-12">
-                <img src="images/security.jpg" alt="security icon"  class="feature-img img-fluid">
+                <img src="images/security.jpg" alt="security icon"  class="img-fluid rounded">
                     <p class="feature-project">Featured Project</p>
                 <div class="circle-sm red">D</div>
                 <div class="circle-sm orange">D</div>
