header replacement with flexible structure using flexboxes and sizing requirements

--- a/index.html
+++ b/index.html
@@ -18,16 +18,23 @@
 <div class="header-container">
 </div>
 
-<div class="container">
+<div class="container h-100">
 
-    <div id="header" class="d-flex">
-        <div><img src="images/logo.png" alt="Codeup Logo" class="logo"></div>
-        <div class="align-self-center"><p>Codeup Design</p></div>
-        <div class="align-self-center ml-auto"><a href="#">Services</a></div>
-        <div class="align-self-center"><a href="#">Work</a></div>
-        <div class="align-self-center"><a href="#">Design</a></div>
-        <div class="align-self-center"><a href="#">Contact</a></div>
+
+    <div id="header" class="d-flex flex-row flex-sm-row flex-md-row align-items-center flex-wrap flex-sm-wrap justify-content-center justify-content-md-start" id="header">
+        <div class="p-2 order-md-1 order-sm-3 order-1 wrap-it"><img src="images/logo.png" class="logo"></div>
+
+        <div class="ml-auto-md p-2 order-md-3 order-sm-1 order-3"> <a href="#"> Services</a></div>
+        <div class="p-2 order-md-4 order-sm-2 order-4"><a href="#">Work</a> </div>
+        <div class="p-2 order-sm-4 order-5"> <a href="#">Blog</a></div>
+        <div class="p-2 order-sm-5 order-6"> <a href="#">Contact</a></div>
+
+
+        <!--<div class="d-sm-flex flex-sm-row">-->
+        <div class="p-2  order-md-2 order-sm-8 order-2 wrap-it"><p>Codeup Design</p></div>
+        <!--</div>-->
     </div>
+
 
 
     <div class="d-flex flex-column justify-content-between">
@@ -59,18 +66,18 @@
                         <div class="col-sm-6 col-xs-12">
                             <img src="images/apple-ipad.jpg" alt="Ipads, with apples" class="img-fluid rounded">
                             <p class="feature-project">Featured Project</p>
-                            <div class="circle-sm red">D</div>
-                            <div class="circle-sm orange">D</div>
-                            <div class="circle-sm green">S</div>
-                            <div class="circle-sm teal">H</div>
+                            <div class="circle-sm red m-1">D</div>
+                            <div class="circle-sm orange m-1">D</div>
+                            <div class="circle-sm green m-1">S</div>
+                            <div class="circle-sm teal m-1">H</div>
                         </div>
                         <div class="col-sm-6 col-xs-12">
                             <img src="images/macbook.jpg" alt="Macbook"  class="img-fluid rounded">
                             <p class="feature-project">Featured Project</p>
-                            <div class="circle-sm red">D</div>
-                            <div class="circle-sm orange">D</div>
-                            <div class="circle-sm green">S</div>
-                            <div class="circle-sm teal">H</div>
+                            <div class="circle-sm red m-1">D</div>
+                            <div class="circle-sm orange m-1">D</div>
+                            <div class="circle-sm green m-1">S</div>
+                            <div class="circle-sm teal m-1">H</div>
                         </div>
                     </div>
 
@@ -79,20 +86,19 @@
                 <img src="images/man.jpg" alt="man, thinking about code"  class="img-fluid rounded">
                     <p class="feature-project">Featured Project</p>
 
-
-                        <div class="circle-sm red">D</div>
-                        <div class="circle-sm orange">D</div>
-                        <div class="circle-sm green">S</div>
-                        <div class="circle-sm teal">H</div>
+                        <div class="circle-sm red m-1">D</div>
+                        <div class="circle-sm orange m-1">D</div>
+                        <div class="circle-sm green m-1">S</div>
+                        <div class="circle-sm teal m-1">H</div>
 
                     </div>
                 <div class="col-sm-6 col-xs-12">
                 <img src="images/security.jpg" alt="security icon"  class="img-fluid rounded">
                     <p class="feature-project">Featured Project</p>
-                <div class="circle-sm red">D</div>
-                <div class="circle-sm orange">D</div>
-                <div class="circle-sm green">S</div>
-                <div class="circle-sm teal">H</div>
+                    <div class="circle-sm red m-1">D</div>
+                    <div class="circle-sm orange m-1">D</div>
+                    <div class="circle-sm green m-1">S</div>
+                    <div class="circle-sm teal m-1">H</div>
                 </div>
                 </div>
 
