fineshed setting up the featured projects

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 <body>
 
 
-
+<!--navbar begins-->
 <div class="header-container">
 </div>
+
 
 <div class="container h-100">
 
@@ -34,11 +35,11 @@
         <div class="p-2  order-md-2 order-sm-8 order-2 wrap-it"><p>Codeup Design</p></div>
         <!--</div>-->
     </div>
+<!--navbar ends-->
 
-
-
-    <div class="d-flex flex-column justify-content-between">
-        <div class="align-self-center"><h1 >Visual Design & Web Development</h1></div>
+<!--header and buttons ends-->
+    <div class="d-flex flex-column justify-content-center">
+        <div class="align-self-center"><h1 class="text-center">Visual Design & Web Development</h1></div>
         <div class="align-self-center"><h2>From Park City, Utah</h2></div>
     </div>
 
@@ -50,7 +51,8 @@
     </div>
         <hr>
 
-
+<!--header and buttons ends-->
+<!--selected work sections begin-->
 
     <div class="container">
         <div class="row">
@@ -60,10 +62,10 @@
 
                 <div class="container">
 
-                    <div class="row"><p>Selected Work</p></div>
+                    <div class="row mb-4 mt-4"><p>Selected Work</p></div>
 
                     <div class="row">
-                        <div class="col-sm-6 col-xs-12">
+                        <div class="col-sm-6 col-xs-12 pb-5">
                             <img src="images/apple-ipad.jpg" alt="Ipads, with apples" class="img-fluid rounded">
                             <p class="feature-project">Featured Project</p>
                             <div class="circle-sm red m-1">D</div>
@@ -82,7 +84,7 @@
                     </div>
 
                     <div class="row">
-                <div class="col-sm-6 col-xs-12">
+                <div class="col-sm-6 col-xs-12 pb-5">
                 <img src="images/man.jpg" alt="man, thinking about code"  class="img-fluid rounded">
                     <p class="feature-project">Featured Project</p>
 
@@ -95,7 +97,7 @@
                 <div class="col-sm-6 col-xs-12">
                 <img src="images/security.jpg" alt="security icon"  class="img-fluid rounded">
                     <p class="feature-project">Featured Project</p>
-                    <div class="circle-sm red m-1">D</div>
+                    <div class="circle-sm red pb-3 m-1">D</div>
                     <div class="circle-sm orange m-1">D</div>
                     <div class="circle-sm green m-1">S</div>
                     <div class="circle-sm teal m-1">H</div>
@@ -106,27 +108,28 @@
                 </div>
 
             </div>
-
+<!--seleted works section ends-->
+<!--side box begins-->
             <div class="col-md-4 col-sm-12">
 
-        <p>The Last</p>
+        <p class="m-4">The Last</p>
 
     <div class="row">
 
-        <div class="d-flex flex-row">
-            <div class="last-image p-2"><img src="images/mobile-phone.jpg" alt="Head" class="last-img"></div>
-            <div class="last-text"><h4>The Admin Bar and Absolute Positioning</h4></div>
+        <div class="d-flex flex-row pb-3">
+            <div class="last-image p-1"><img src="images/mobile-phone.jpg" alt="Head" class="last-img"></div>
+            <div class="last-text"p-1><p class="last-title">The Admin Bar and Absolute Positioning</p></div>
         </div>
 
-        <div class="d-flex flex-row">
-            <div class="last-image p-2"><img src="images/head.jpg" alt="Head" class="last-img "></div>
-            <div class="last-text"><h4>Nibblers Awesome Website Testing</h4></div>
+        <div class="d-flex flex-row pb-3">
+            <div class="last-image p-1"><img src="images/head.jpg" alt="Head" class="last-img "></div>
+            <div class="last-text p-1"><p class="last-title">Nibblers Awesome Website Testing</p></div>
         </div>
 
 
-        <div class="d-flex flex-row">
-            <div class="last-image p-2"><img src="images/ipad.jpg" alt="Head" class="last-img"></div>
-            <div class="last-text"><h4>How to get google to Like you</h4></div>
+        <div class="d-flex flex-row pb-3">
+            <div class="last-image p-1"><img src="images/ipad.jpg" alt="Head" class="last-img"></div>
+            <div class="last-text p-1"><p class="last-title">How to get google to Like you</p></div>
         </div>
 
 
@@ -141,6 +144,7 @@
     </div>
 
     </div>
+<!--side box ends-->
 
     </div>
 
