tweaked the side box and the padding

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                 <div class="container">
 
-                    <div class="row mb-4 mt-4"><p>Selected Work</p></div>
+                    <div class="row mb-4 mt-4"><p>SELECTED WORK</p></div>
 
                     <div class="row">
                         <div class="col-sm-6 col-xs-12 pb-5">
@@ -112,12 +112,12 @@
 <!--side box begins-->
             <div class="col-md-4 col-sm-12">
 
-        <p class="m-4">The Last</p>
+        <p class="m-4">THE LAST</p>
 
-    <div class="row">
+    <div class="row pl-3">
 
         <div class="d-flex flex-row pb-3">
-            <div class="last-image p-1"><img src="images/mobile-phone.jpg" alt="Head" class="last-img"></div>
+            <div class="last-image  p-1"><img src="images/mobile-phone.jpg" alt="Head" class="last-img"></div>
             <div class="last-text"p-1><p class="last-title">The Admin Bar and Absolute Positioning</p></div>
         </div>
 
