fixed ma size, added addition media queries to file. reorganized circles to wrap properly for sizing

--- a/index.html
+++ b/index.html
@@ -43,11 +43,19 @@
         <div class="align-self-center"><h2>From Park City, Utah</h2></div>
     </div>
 
-    <div class="d-flex flex-wrap justify-content-center">
-    <div class="circle-lg red align-middle m-2">Design</div>
-    <div class="circle-lg orange m-2">Develop</div>
-    <div class="circle-lg green m-2 ">Support</div>
-    <div class="circle-lg teal m-2">Host</div>
+    <div class="d-flex flex-wrap flex-sm-nowrap flex-lg-nowrap justify-content-center">
+    <div class="p-2">
+        <div class="circle-lg red m-1">Design</div>
+    </div>
+        <div class="p-2">
+             <div class="circle-lg orange m-1">Develop</div>
+        </div>
+            <div class="p-2">
+                    <div class="circle-lg green m-1">Support</div>
+            </div>
+        <div class="p-2">
+                    <div class="circle-lg teal m-1">Host</div>
+                </div>
     </div>
         <hr>
 
@@ -57,7 +65,7 @@
     <div class="container">
         <div class="row">
 
-            <div class="col-md-8 col-sm-12">
+            <div class="col-md-9 col-sm-12 ">
 
 
                 <div class="container">
@@ -110,7 +118,7 @@
             </div>
 <!--seleted works section ends-->
 <!--side box begins-->
-            <div class="col-md-4 col-sm-12">
+            <div class="col-md-3 col-sm-12">
 
         <p class="m-4">THE LAST</p>
 
@@ -134,7 +142,6 @@
 
 
         <div class="twitter-header">
-
 
         </div>
         <div class="tweet">
