adding twitter icon to images.

--- a/index.html
+++ b/index.html
@@ -141,9 +141,11 @@
         </div>
 
 
-        <div class="twitter-header">
-
+        <div class="d-flex flex-row tweet">
+            <div class="p-2"> <img src="images/twitter.png" alt="Twitter"></div>
+            <div class="p-2"><p>Last Tweet:</p></div>
         </div>
+
         <div class="tweet">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
