orgnanized twitter icon and text, added formatting

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
         <div class="d-flex flex-row tweet">
             <div class="p-2"> <img src="images/twitter.png" alt="Twitter"></div>
-            <div class="p-2"><p>Last Tweet:</p></div>
+            <div class="p-2"><span>Last Tweet:</span></div>
         </div>
 
         <div class="tweet">
