--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
 
 <!--header and buttons ends-->
     <div class="d-flex flex-column justify-content-center">
-        <div class="align-self-center"><h1 class="text-center">Visual Design & Web Development</h1></div>
-        <div class="align-self-center"><h2>From Park City, Utah</h2></div>
+        <div class="align-self-center"><h1 class="text-center pt-5 pb-5">Visual Design & Web Development</h1></div>
+        <div class="align-self-center"><h3 class="pb-4">From Park City, Utah</h3></div>
     </div>
 
-    <div class="d-flex flex-wrap flex-sm-nowrap flex-lg-nowrap justify-content-center">
+    <div class="d-flex flex-wrap flex-sm-nowrap flex-lg-nowrap justify-content-center pb-3">
     <div class="p-2">
-        <div class="circle-lg red m-1">Design</div>
+        <div class="circle-lg red m-1 mr-2">Design</div>
     </div>
         <div class="p-2">
-             <div class="circle-lg orange m-1">Develop</div>
+             <div class="circle-lg orange m-1 mr-2">Develop</div>
         </div>
             <div class="p-2">
-                    <div class="circle-lg green m-1">Support</div>
+                    <div class="circle-lg green m-1 mr-2">Support</div>
             </div>
         <div class="p-2">
-                    <div class="circle-lg teal m-1">Host</div>
+                    <div class="circle-lg teal m-1 mr-2">Host</div>
                 </div>
     </div>
         <hr>
@@ -70,11 +70,11 @@
 
                 <div class="container">
 
-                    <div class="row mb-4 mt-4"><p>SELECTED WORK</p></div>
+                    <div class="row mb-4 mt-4"><p class="align-center-xs align-center-sm align-left-md">SELECTED WORK</p></div>
 
                     <div class="row">
                         <div class="col-sm-6 col-xs-12 pb-5">
-                            <img src="images/apple-ipad.jpg" alt="Ipads, with apples" class="img-fluid rounded">
+                            <img src="images/apple-ipad.jpg" alt="Ipads, with apples" class="feature-img img-fluid rounded">
                             <p class="feature-project">Featured Project</p>
                             <div class="circle-sm red m-1">D</div>
                             <div class="circle-sm orange m-1">D</div>
@@ -82,7 +82,7 @@
                             <div class="circle-sm teal m-1">H</div>
                         </div>
                         <div class="col-sm-6 col-xs-12">
-                            <img src="images/macbook.jpg" alt="Macbook"  class="img-fluid rounded">
+                            <img src="images/macbook.jpg" alt="Macbook"  class=" feature-img img-fluid rounded">
                             <p class="feature-project">Featured Project</p>
                             <div class="circle-sm red m-1">D</div>
                             <div class="circle-sm orange m-1">D</div>
@@ -93,7 +93,7 @@
 
                     <div class="row">
                 <div class="col-sm-6 col-xs-12 pb-5">
-                <img src="images/man.jpg" alt="man, thinking about code"  class="img-fluid rounded">
+                <img src="images/man.jpg" alt="man, thinking about code"  class="feature-img img-fluid rounded">
                     <p class="feature-project">Featured Project</p>
 
                         <div class="circle-sm red m-1">D</div>
@@ -103,7 +103,7 @@
 
                     </div>
                 <div class="col-sm-6 col-xs-12">
-                <img src="images/security.jpg" alt="security icon"  class="img-fluid rounded">
+                <img src="images/security.jpg" alt="security icon"  class="feature-img img-fluid rounded">
                     <p class="feature-project">Featured Project</p>
                     <div class="circle-sm red pb-3 m-1">D</div>
                     <div class="circle-sm orange m-1">D</div>
@@ -120,7 +120,7 @@
 <!--side box begins-->
             <div class="col-md-3 col-sm-12">
 
-        <p class="m-4">THE LAST</p>
+        <p class="mt-4 mb-4 align-center-xs align-center-sm align-left-md">THE LAST</p>
 
     <div class="row pl-3">
 
@@ -140,7 +140,7 @@
             <div class="last-text p-1"><p class="last-title">How to get google to Like you</p></div>
         </div>
 
-
+        <div class="tweet-container">
         <div class="d-flex flex-row tweet">
             <div class="p-2"> <img src="images/twitter.png" alt="Twitter"></div>
             <div class="p-2"><span>Last Tweet:</span></div>
@@ -148,6 +148,7 @@
 
         <div class="tweet">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
         </div>
 
     </div>
